Add Task CRUD operation to firebase Database.

--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
-FIREBASE_API_KEY=your-api-key
-FIREBASE_AUTH_DOMAIN=your-auth-domain
-FIREBASE_PROJECT_ID=your-project-id
-MONGO_URI=mongodb://localhost:27017/todo
-POSTGRES_URI=postgresql://user:password@localhost:5432/todo
+# FIREBASE
+FIREBASE_API_KEY="AIzaSyA-1fCyEZGgbKP6CNeGv_pqgVcXCrEv2hY"
+FIREBASE_AUTH_DOMAIN="portfolio-e3c04.firebaseapp.com"
+FIREBASE_DATABASE_URL="https://portfolio-e3c04-default-rtdb.firebaseio.com"
+FIREBASE_PROJECT_ID="portfolio-e3c04"
+FIREBASE_STORAGE_BUCKET="portfolio-e3c04.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID="1026168475509"
+FIREBASE_APP_ID="1:1026168475509:web:160e9672f09ca714850d3c"
+FIREBASE_MEASUREMENT_ID="G-6TSZ859C6E"
+# MongoDB
+MONGO_URI="mongodb://localhost:27017/"
+# Postgres uri
+POSTGRES_URI="postgresql://user:password@localhost:5432/tasks"
