--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,16 @@ name = "pypi"
 uvicorn = {extras = ["standard"], version = "*"}
 fastapi = "*"
 pymongo = "*"
+python-dotenv = "*"
+pip = "*"
+wheel = "*"
+setuptools = "*"
+requests = "*"
+urllib3 = "*"
+pyrebase4 = "*"
 
 [dev-packages]
 autopep8 = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
