Add Task CRUD operation to Postgresql Database.

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ FIREBASE_MEASUREMENT_ID="G-6TSZ859C6E"
 # MongoDB
 MONGO_URI="mongodb://localhost:27017/"
 # Postgres uri
-POSTGRES_URI="postgresql://user:password@localhost:5432/tasks"
+POSTGRES_URI="postgresql://postgres:98202521@localhost:5432/portfolio"
